syntax = "proto3";

package bannerPb;

option go_package = "./;bannerPb";

import "google/protobuf/timestamp.proto";
message Banner {
  // @inject_tag: json:"id"
  int64 ID   = 1;
  // @inject_tag: json:"path"
  string Path = 2;
  // @inject_tag: json:"hash"
  string Hash = 3;
  // @inject_tag: json:"name"
  string Name  = 4;
  // @inject_tag: json:"imageType"
  int64 ImageType  = 5;
  // @inject_tag: json:"createdAt"
  google.protobuf.Timestamp CreatedAt = 6;
  // @inject_tag: json:"updatedAt"
  google.protobuf.Timestamp UpdatedAt = 7;
}

message BannerListRequest {
  int64 Page = 2;
  int64 PageSize = 3;
}

message BannerListResponse {
  int64 Count = 1;
  repeated Banner Result = 2;
}

service RPC {
  rpc BannerList(BannerListRequest) returns (BannerListResponse){}
}
